[package]
name = "md5-core"
description = "Functional-style md5 crate"
homepage = "https://github.com/vccolombo/md5-core"
repository = "https://github.com/vccolombo/md5-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
